@@ -1,0 +1,107 @@
+/* <dtml-with base_properties> (do not remove this :) */
+/* <dtml-call "REQUEST.set('portal_url', portal_url())"> (not this either :) */
+
+/* specific rules for restricted power observers, hide some elements... */
+/* hide some faceted filters */
+.faceted-widget.faceted-checkboxes-widget.faceted-checkbox-widget.section-advice,
+.faceted-widget.faceted-checkboxes-widget.faceted-checkbox-widget.section-created,
+.faceted-widget.faceted-checkboxes-widget.faceted-checkbox-widget.section-creator,
+.faceted-widget.faceted-checkboxes-widget.faceted-checkbox-widget.section-taken-over-by,
+.faceted-widget.faceted-checkboxes-widget.faceted-checkbox-widget.section-to-send-to,
+.faceted-widget.faceted-daterange-widget.section-created,
+.faceted-widget.faceted-daterange-widget.section-modified {
+    display: none !important;
+}
+
+/* hide columns 'Creator' and 'actions' */
+th.th_header_Creator, td.td_cell_Creator,
+th.th_header_actions, td.td_cell_actions {
+    display: none !important;
+}
+
+/* hide link to history on views */
+span#content-history {
+    display: none !important;
+}
+
+/* hide some values from the 'review_state' filter */
+.faceted-widget.section-review-state li[id$='_presented'],
+.faceted-widget.section-review-state li[id$='_validated'],
+.faceted-widget.section-review-state li[id$='_returned_to_proposing_group'],
+.faceted-widget.section-review-state li[id$='_marked_not_applicable'] {
+    display: none !important;
+}
+
+
+/* </dtml-with> */
+/* DOCUMENTATION ON PRE-DEFINED PROPERTIES FROM PLONE */
+
+ /* You can insert colors and other variables from Plone's
+    base_properties by doing:
+
+    & dtml-variableName ; (without the spaces, excluded here to not make it render)
+
+    Example:
+
+    myLink {
+        color: & dtml-fontColor ;   (again, without the spaces)
+    }
+
+   This means you can generate your own elements that use Plone's defaults,
+   and respect any customizations people have done. See base_properties for
+   the default values.
+
+   These are the available properties:
+
+   logoName - the file name of the portal logo.
+
+   fontFamily - the font family used for all text that is not headers
+
+   fontBaseSize - the base font size that everything is calculated from
+
+   fontColor - the main font color
+
+   backgroundColor - the background color
+
+   linkColor - the color used on normal links
+
+   linkActiveColor - color used on active links
+
+   linkVisitedColor - color used on visited links
+
+   borderWidth - the width of most borders in Plone
+
+   borderStyle - the style of the border lines, normally solid
+
+   borderStyleAnnotations - style of border lines on comments etc
+
+   globalBorderColor - the border color used on the main tabs, the portlets etc
+
+   globalBackgroundColor - background color for the selected tabs, portlet headings etc
+
+   globalFontColor - the color of the font in the tabs and in portlet headings
+
+   headingFontFamily - font family for h1/h2/h3/h4/h5/h6 headlines.
+
+   headingFontBaseSize - the base size used when calculating the different headline sizes
+
+   contentViewBorderColor - the content view tabs border color
+
+   contentViewBackgroundColor - the content view tabs background color
+
+   contentViewFontColor - the font color used in the content view tabs
+
+   textTransform - whether to lowercase text in portlets, tabs etc.
+
+   evenRowBackgroundColor - the background color of even rows in listings
+
+   oddRowBackgroundColor - the background color of even rows in listings
+
+   notifyBorderColor - border color of notification elements like the status message, the calendar focus
+
+   notifyBackgroundColor - background color of notification elements like the status message, the calendar focus
+
+   discreetColor:string=#999999
+   helpBackgroundColor:string=#ffffe1
+
+ */
